fix all the z-index values

--- a/assets/less/sugar/component/sidenav.less
+++ b/assets/less/sugar/component/sidenav.less
@@ -26,7 +26,7 @@
     @media only screen and (max-width: @screen-s-max) {
         padding-top: 0;
         position: fixed;
-        z-index: 9999;
+        z-index: 1100;
         .transition(.3s all ease );
     }
     .cf();
