--- a/assets/less/sugar/module/tooltips.less
+++ b/assets/less/sugar/module/tooltips.less
@@ -16,7 +16,7 @@
   
     display: block;
     position: absolute;
-    z-index: 1040;
+    z-index: 1000;
     
     &.in { .opacity(1); }
     &.top    { margin-top:  unit(-@eighth-spacing-unit, px); padding: @tooltip-arrow-width 0; }
